# redmine-client

./: package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src/lib/: Config.svelte  Issue.svelte  IssueList.svelte  Redmine.svelte  Settings.svelte
src/lib/models/: config.js  issue.js  issue_category.js  result.js
src/routes/: +layout.js  +layout.svelte  +page.js  +page.svelte  Redmine.svelte  Register.svelte  styles.css
static/: smui-dark.css  smui.css
